--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,39 @@
   text-align: center;
 }
 
+.body {
+  padding-left: 10rem;
+  padding-right: 10rem;
+}
+
+@media (max-width: 1199px) {
+  .body {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .body {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .body {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+@media (max-width: 575px) {
+  .body {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
