--- a/src/components/WorkExperience/WorkExperience.css
+++ b/src/components/WorkExperience/WorkExperience.css
@@ -1,5 +1,5 @@
 .work-experience-container {
-    padding: 2rem;
+    padding: 1rem;
     background-color: #c4c4c4;
 }
 
@@ -10,7 +10,6 @@
     margin-bottom: 1rem;
     background-color: #b79f9f;
 }
-
 
 .experience-list {
     display: flex;
@@ -44,14 +43,22 @@
     font-size: 15px;
 }
 .job-duration {
-    height: 10px;
+    height: 15px;
     margin: 0;
     font-size: 14px;
     /* font-weight: bold; */
 }
 
+.job-location {
+    height: 10px;
+    margin: 0;
+    font-size: 14px;
+    font-style: italic;
+    /* font-weight: bold; */
+}
 
-@media (max-width: 1350px) {
+
+@media (max-width: 1150px) {
     .experience-list {
         flex-direction: column;
         align-items: stretch; 
