--- a/src/components/WorkExperience/WorkExperience.css
+++ b/src/components/WorkExperience/WorkExperience.css
@@ -20,13 +20,13 @@
 }
 
 .experience-item {
-    /* border: 1px solid #ccc; */
     padding: 1rem;
     border-radius: 5px;
     background-color: #f9f9f9;
     width: 300px;
     box-sizing: border-box;
     text-align: left;
+    position: relative; /* Added for positioning the button */
 }
 
 .job-title {
@@ -42,11 +42,11 @@
     font-weight: bold;
     font-size: 15px;
 }
+
 .job-duration {
     height: 15px;
     margin: 0;
     font-size: 14px;
-    /* font-weight: bold; */
 }
 
 .job-location {
@@ -54,9 +54,41 @@
     margin: 0;
     font-size: 14px;
     font-style: italic;
-    /* font-weight: bold; */
 }
 
+.view-details-button {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.view-details-button:hover {
+    background-color: #0056b3;
+}
+
+.details-box {
+    margin-top: 1rem;
+    padding: 1rem;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: opacity 1s ease, height 1s ease;
+    text-align: left;
+}
+
+.details-box.visible {
+    opacity: 1;
+    height: auto;
+}
 
 @media (max-width: 1150px) {
     .experience-list {
