--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,71 +1,3 @@
-/* .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    background-color: #333;
-    color: #fff;
-  }
-  
-  .logo-container {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .links-container {
-    display: flex;
-    gap: 1rem;
-  }
-  
-  .link a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1rem;
-  }
-  
-  .toggle-switch {
-    width: 60px;
-    height: 30px;
-    background-color: #ccc;
-    border-radius: 25px;
-    position: relative;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 5px;
-    box-sizing: border-box;
-  }
-  
-  .toggle-switch:hover {
-    background-color: #bbb;
-  }
-  
-  .toggle-knob {
-    width: 28px;
-    height: 28px;
-    background-color: #fff;
-    border-radius: 50%;
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    transition: left 0.3s;
-  }
-  
-  .toggle-knob-right {
-    left: 30px;
-  }
-  
-  .toggle-text {
-    font-size: 0.8rem;
-    color: #000000;
-    z-index: 1;
-    font-weight: bold;
-  } */
-
-
-
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -95,11 +27,13 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 60px; /* Adjust based on your navbar height */
-    right: 1rem;
+    top: 60px; 
+    left: 0; 
+    right: 0;
     background-color: #333;
     padding: 1rem;
     border-radius: 5px;
+    z-index: 1;
   }
   
   .link a {
@@ -158,3 +92,4 @@
       display: block;
     }
   }
+  
