--- a/src/components/WorkExperience/WorkExperience.css
+++ b/src/components/WorkExperience/WorkExperience.css
@@ -1,6 +1,7 @@
 .work-experience-container {
     padding: 1rem;
-    background-color: #c4c4c4;
+    margin-top:0;
+    margin-bottom:0;
 }
 
 .header {
@@ -8,7 +9,6 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1rem;
-    background-color: #b79f9f;
 }
 
 .experience-list {
@@ -16,13 +16,11 @@
     flex-wrap: wrap;
     gap: 1rem;
     margin-top: 0rem;
-    background-color: #585858;
 }
 
 .experience-item {
     padding: 1rem;
     border-radius: 5px;
-    background-color: #f9f9f9;
     width: 300px;
     box-sizing: border-box;
     text-align: left;
@@ -61,7 +59,7 @@
     bottom: 1rem;
     right: 1rem;
     padding: 0.5rem 1rem;
-    background-color: #007bff;
+    background-color: #000000;
     color: white;
     border: none;
     border-radius: 5px;
@@ -69,15 +67,13 @@
 }
 
 .view-details-button:hover {
-    background-color: #0056b3;
+    background-color: #2f2f2f;
 }
 
 .details-box {
     margin-top: 1rem;
     padding: 1rem;
-    background-color: #ffffff;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     opacity: 0;
     height: 0;
     overflow: hidden;
@@ -89,6 +85,10 @@
     opacity: 1;
     height: auto;
     padding-top: 0;
+}
+
+.details-box.visible p {
+    line-height: 1.2;
 }
 
 @media (max-width: 1150px) {
