--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -1,12 +1,16 @@
 .summary-container {
+    margin-top:10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: #000;
+    color: #ffffff;
     padding: 2rem;
     border-radius: 8px;
     max-width: 900px;
     margin: 0 auto;
+    background-color: #1e1e1e;
+    /* box-shadow:  5 10px rgba(0, 0, 0, 0.1); */
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.1);
 
   }
   
@@ -18,17 +22,17 @@
   .text-container h1 {
     font-size: 2rem;
     margin-bottom: 0.5rem;
-    color: #333;
+    color: #ffffff;
   }
   .text-container h1 strong {
     font-size: 2.5rem;
-    color: #000;
+    color: #ffffff;
   }
   
   .text-container p {
     font-size: 1.2rem;
     margin-bottom: 0;
-    color: #000000;
+    color: #ffffff;
     line-height: 1.5;
   }
   
