--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,95 +1,51 @@
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    background-color: #000000;
-    color: #fff;
-  }
-  
-  .logo-container {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .menu-toggle {
-    display: none;
-    font-size: 2rem;
-    cursor: pointer;
-  }
-  
-  .links-container {
-    display: flex;
-    gap: 1rem;
-  }
-  
-  .links-container.open {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 60px; 
-    left: 0; 
-    right: 0;
-    background-color: #333;
-    padding: 1rem;
-    border-radius: 5px;
-    z-index: 1;
-  }
-  
-  .link a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1rem;
-  }
-  
-  .toggle-switch {
-    width: 60px;
-    height: 30px;
-    background-color: #ccc;
-    border-radius: 25px;
-    position: relative;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 5px;
-    box-sizing: border-box;
-  }
-  
-  .toggle-switch:hover {
-    background-color: #bbb;
-  }
-  
-  .toggle-knob {
-    width: 28px;
-    height: 28px;
-    background-color: #fff;
-    border-radius: 50%;
-    position: absolute;
-    top: 1px;
-    left: 1px;
-    transition: left 0.3s;
-  }
-  
-  .toggle-knob-right {
-    left: 30px;
-  }
-  
-  .toggle-text {
-    font-size: 0.8rem;
-    color: #000000;
-    z-index: 1;
-    font-weight: bold;
-  }
-  
-  @media (max-width: 768px) {
-    .links-container {
-      display: none;
-    }
-  
-    .menu-toggle {
-      display: block;
-    }
-  }
-  
+.navbar {
+  display: flex;
+  padding: 1rem;
+  background-color: #909090;
+  height: 30px;
+  align-items: center;
+}
+
+.toggle-switch {
+  width: 60px;
+  height: 30px;
+  background-color: #ccc;
+  border-radius: 25px;
+  position: relative;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 5px;
+  box-sizing: border-box;
+}
+
+.toggle-switch:hover {
+  background-color: #bbb;
+}
+
+.toggle-knob {
+  width: 28px;
+  height: 28px;
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  transition: left 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #000;   
+}
+
+.toggle-knob-right {
+  left: 30px;
+}
+
+.toggle-text {
+  display: none;
+}
