--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body.dark {
   padding-left: 13rem;
   padding-right: 13rem;
   padding-top: 1em;
+  margin-bottom: 30px;
 }
 
 @media (max-width: 1400px) {
@@ -81,4 +82,109 @@ body.dark {
   to {
     transform: rotate(360deg);
   }
+}
+
+.buttons-container {
+  margin-top: 2rem;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.buttons-container button {
+  padding: 0.75rem 1.5rem;
+  background-color: #0073e6;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  flex: 1 1 auto;
+  max-width: 200px;
+}
+
+.buttons-container button:hover {
+  background-color: #005bb5;
+  transform: translateY(-3px);
+}
+
+.buttons-container button:active {
+  transform: translateY(1px);
+}
+
+.buttons-container button:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(0, 115, 230, 0.5);
+}
+
+@media (max-width: 600px) {
+  .buttons-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .buttons-container button {
+    width: 100%; 
+    max-width: 300px;
+  }
+}
+
+.menu-icons-container {
+  margin-top: 2rem;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.menu-icon-circle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #ffffff; 
+  transition: background-color 0.3s, transform 0.3s;
+  cursor: pointer;
+  border: 1px solid #000000;
+}
+
+
+.menu-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.menu-icon-circle:hover {
+  background-color: #cbcbcb;
+  transform: scale(1.2);
+}
+
+.menu-icon-circle:active {
+  transform: translateY(1px);
+}
+
+.menu-tooltip {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  font-size: 0.75rem;
+  white-space: nowrap;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none; 
+}
+
+.menu-icon-circle:hover .menu-tooltip {
+  opacity: 1;
 }
