--- a/src/components/OtherExperience/OtherExperience.css
+++ b/src/components/OtherExperience/OtherExperience.css
@@ -157,6 +157,8 @@
     text-overflow: ellipsis;
     white-space: nowrap; 
     text-align: left;
+    max-width: 100%;
+    white-space: normal;
 }
 
 .parttime-duration {
